[package]
name = "shoup-threshold-rsa"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["alloc"] }
rasn = "0.27.3"
rsa = { version = "0.9.8" }
sha2 = "0.10.9"
rand = "0.9.2"
rug = "1.28.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "rug_integers"
harness = false
