[package]
name = "shoup-threshold-rsa"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["alloc"] }
rasn = "0.28.0"
rsa = { version = "0.9.8" }
sha2 = "0.10.9"
rand = "0.9.2"
rug = { version = "1.28.0", default-features = false, features = ["integer", "std"] }
clap = { version = "4.5.50", features = ["derive"] }
openssl = "0.10.74"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "rug_integers"
harness = false
