[package]
name = "shoup-threshold-rsa"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shoup"
path = "src/main.rs"

[dependencies]
crypto-bigint = { version = "0.7.3", features = ["alloc"] }
rsa = { version = "0.9.8" }
sha2 = "0.10.9"
rand = { version = "0.10.1", features = ["sys_rng", "chacha"] }
rug = { version = "1.28.0", default-features = false, features = ["integer", "std"] }
clap = { version = "4.5.50", features = ["derive"] }
der = { version = "0.8.0", features = ["derive", "alloc"] }
crypto-primes = "0.7.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "rug_integers"
harness = false
